# locationX

./: insomnia.json
server/: API_ENDPOINTS.md  Cargo.toml  DATABASE_INTEGRATION_REPORT.md  FIXES_REPORT.md  JWT_AUTHENTICATION_GUIDE.md  JWT_TOKENS_FIX_REPORT.md  MIGRATIONS.md  MIGRATION_SETUP.md  README.md  START_SERVER.md  example.env
server/.sqlx/: database.json
server/migrations/: 001_create_user_types.sql  002_create_users.sql  003_create_first_user.sql
server/src/: main.rs
server/src/application/: services.rs
server/src/domain/: entities.rs  traits.rs
server/src/infrastructure/: database.rs  middleware.rs  migrations.rs  mod.rs  postgres_user_repository.rs  user_repository.rs
server/src/infrastructure/jwt/: extract_user_uuid.rs  jwt_service.rs  mod.rs
server/src/presentation/: handlers.rs  routes.rs
server/src/presentation/handlers/: mod.rs
server/src/presentation/handlers/guest/: guest_zone.rs  mod.rs
server/src/presentation/handlers/status/: db.rs  mod.rs  server.rs
server/src/presentation/handlers/token/: refresh.rs
server/src/presentation/handlers/user/: auth_user.rs  get_current_user.rs  mod.rs  register_user.rs  update_current_user.rs
sloty_ui/: README.md  pubspec.yaml
sloty_ui/android/app/: build.gradle.kts
sloty_ui/ios/Runner/: Info.plist
sloty_ui/ios/Runner.xcodeproj/: project.pbxproj
sloty_ui/lib/: main.dart
sloty_ui/linux/: CMakeLists.txt
sloty_ui/linux/runner/: my_application.cc
sloty_ui/test/: widget_test.dart
sloty_ui/web/: index.html  manifest.json
sloty_ui/windows/: CMakeLists.txt
(+7 files in other folders)
